AssineJa/force-app/main/default/objects/Contract/fields/status_adimplencia__c.field-meta.xml
<CustomField>
    <fullName>status_adimplencia__c</fullName>
    <label>status adimplencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sem definição</fullName>
                <default>true</default>
                <label>Sem definição</label>
            </value>
            <value>
                <fullName>Em_dia</fullName>
                <label>Em dia</label>
            </value>
            <value>
                <fullName>Atrasado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>